--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
+    "@react-google-maps/api": "^2.20.7",
+    "@react-pdf/renderer": "^4.3.0",
     "axios": "^1.9.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.523.0",
     "react": "^19.0.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.2",
     "react-slick": "^0.30.3",
-    "recharts": "^2.15.3",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.4",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
